Solve/SonarCloud_issues